# cric_chat

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHATGPT_SETUP_GUIDE.md  CODE_CHANGES_FOR_FASTMCP_CLOUD.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  FASTMCP_CLOUD_ASYNCIO_FIX.md  FASTMCP_CLOUD_CONFIG.md  FASTMCP_CLOUD_DEPLOYMENT.md  FASTMCP_CLOUD_FIX.md  QUICK_REFERENCE.md  README.md  SECURITY_FIXES.md  VISUAL_DIFF.md  WIDGET_DATA_FLOW.md  config.py  deploy-docker.sh  docker-compose.yml  fastmcp.json  mcp_handlers.py  pyproject.toml  resources.py  routes.py  schemas.py  server.py  tools.py  verify-docker-security.sh  widgets.py
cric_buzz_service/: __init__.py  base_client.py  cric_buzz_service.py  matches_api.py  news_api.py  photos_api.py  players_api.py  series_api.py  stats_api.py
ui/: .env.example  .gitignore  ENV_SETUP.md  THEME_GUIDE.md  THEME_MIGRATION_SUMMARY.md  build.js  index.html  package-lock.json  package.json  react.html  test_build.html
ui/mock-data/: batting-info-default.json  bowling-info-default.json  cricket-records-default.json  icc-rankings-default.json  player-career-default.json  player-info-default.json  player-news-default.json  trending-players-default.json
ui/src/: hooks.js  index.jsx  theme.js
ui/src/CricketRecords/: CricketRecords.jsx  CricketRecords.styles.js
ui/src/ICCRankings/: ICCRankings.jsx  ICCRankings.styles.js
ui/src/PlayerBattingInfo/: PlayerBattingInfo.jsx  PlayerBattingInfo.styles.js
ui/src/PlayerBowlingInfo/: PlayerBowlingInfo.jsx  (+1 more)
(+15 files in other folders)
