[project]
name = "cric_chat"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "backoff>=2.2.1",
    "cachetools>=6.1.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "httpx>=0.27.0",
    "jq>=1.10.0",
    "mcp>=1.16.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "starlette>=0.41.0",
    "uvicorn>=0.35.0",
]
